# aether-lsp

./: .gitignore  COMMENT_EXTRACTION.md  COMMENT_IMPLEMENTATION.md  Cargo.toml  DEMO_GUIDE.md  DEVELOPMENT.md  FIXES.md  HOW_TO_USE.md  IMPLEMENTATION_SUMMARY.md  NAMING_FIX.md  PUBLISH_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  USAGE_GUIDE.md  build.sh  package.sh
examples/: test.aether  test_builtins.aether  test_comments.aether  test_symbols.aether
src/: ast.rs  backend.rs  builtins.rs  completion.rs  diagnostics.rs  lexer.rs  main.rs  parser.rs  symbols.rs  token.rs
vscode-extension/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  publish.sh  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: aether.tmLanguage.json
