[package]
name = "aether-lsp"
version = "0.1.0"
edition = "2024"
authors = ["xiaozuhui"]
description = "Language Server Protocol implementation for Aether programming language"
license = "MIT"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.48.0", features = [
    "full",
    "io-std",
    "io-util",
    "rt-multi-thread",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"

[dev-dependencies]
tokio-test = "0.4"
